# Vk_Engine

./: .gitignore  CMakeLists.txt  conan_install.bat  conanfile.py  engine.cpp  engine.h
docs/: RenderGraph_Flow.md  render架构.md
engine_render/: CMakeLists.txt
engine_render/include/: RenderEngine.h
engine_render/include/backend/: VulkanCommandBuffer.h  VulkanDebug.h  VulkanDescriptor.h  VulkanDevice.h  VulkanPipeline.h  VulkanResources.h  VulkanShader.h  VulkanSwapChain.h  VulkanTypes.h
engine_render/include/core/: Handle.h  Type.h  Types.h
engine_render/include/interface/: ICommandBuffer.h  IPipelineManager.h  IPipelineStateCache.h  IRenderDevice.h  IRenderGraph.h  IRenderJobSystem.h  IRenderSystem.h  IResourceManager.h  IShaderHotReload.h  IShaderManager.h  ITextureStreaming.h
engine_render/include/render_graph/: RenderGraph.h  RenderSystem.h
engine_render/include/utils/: DebugTools.h  GPUResourceDebugger.h  Log.h  Math.h  Memory.h  RenderGraphDebugger.h
engine_render/src/: dummy.cpp
engine_rhi/: CMakeLists.txt
engine_rhi/include/: RHIFwd.h
engine_rhi/include/core/: Handle.h  ResourceManager.h  SlotMap.h  TypedHandle.h
engine_rhi/include/managers/: BufferManager.h  SamplerManager.h  ShaderManager.h  TextureManager.h
engine_rhi/include/rhi/: Buffer.h  Pipeline.h  RHITypes.h  Sampler.h  Shader.h  Texture.h
engine_rhi/include/vulkan/: CommandBufferManager.h  DeviceCapabilities.h  DeviceManager.h  PipelineManager.h  ResourceManager.h  SwapChainManager.h  VulkanUtils.h
engine_rhi/include/vulkan/Command/: CommandBuffer.h  CommandPool.h  CommandQueue.h
engine_rhi/include/vulkan/Descriptor/: BindlessDescriptorManager.h
engine_rhi/include/vulkan/RenderPipeline/: ComputePipeline.h  ComputePipelineManager.h  GraphicsPipeline.h  GraphicsPipelineManager.h  Pipeline.h  PipelineLayoutManager.h
engine_rhi/include/vulkan/Resources/: Buffer.h  BufferManager.h  Sampler.h  SamplerManager.h  Shader.h  ShaderManager.h  Texture.h  TextureManager.h  VulkanResourceHandles.h  VulkanResources.h
engine_rhi/include/vulkan/Synchronization/: Fence.h  FencePool.h  Semaphore.h  SemaphorePool.h  SyncConfig.h  SynchronizationManager.h  TimelineSemaphore.h
engine_rhi/src/managers/: BufferManager.cpp  SamplerManager.cpp  ShaderManager.cpp  TextureManager.cpp
engine_rhi/src/vulkan/: DeviceManager.cpp  SwapChianManager.cpp  SynchronizationManager.cpp
engine_rhi/src/vulkan/Command/: CommandBuffer.cpp  CommandPool.cpp  CommandQueue.cpp
engine_rhi/src/vulkan/Synchronization/: Fence.cpp  FencePool.cpp  Semaphore.cpp  SemaphorePool.cpp  SynchronizationManager.cpp  TimelineSemaphore.cpp
